feat: improve code style